--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "framer-motion": "^11.3.30",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.424.0",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-intl": "^3.17.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "tiptap-extension-image-upload": "^0.1.6",
     "tiptap-extension-resize-image": "^1.1.8"
   },
   "devDependencies": {
