--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@next/font": "^14.2.5",
     "@tiptap/extension-color": "^2.6.6",
+    "@tiptap/extension-hard-break": "^2.6.6",
     "@tiptap/extension-image": "^2.5.8",
     "@tiptap/extension-link": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.5.8",
     "@tiptap/extension-text-align": "^2.5.8",
     "@tiptap/extension-underline": "^2.5.8",
+    "@tiptap/extension-youtube": "^2.6.6",
     "@tiptap/pm": "^2.5.8",
     "@tiptap/react": "^2.5.8",
     "@tiptap/starter-kit": "^2.5.8",
