--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.5",
     "tiptap-extension-resize-image": "^1.1.8"
   },
   "devDependencies": {
