--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-link": "^2.6.6",
     "@tiptap/extension-placeholder": "^2.5.8",
     "@tiptap/extension-text-align": "^2.5.8",
+    "@tiptap/extension-text-style": "^2.11.0",
     "@tiptap/extension-underline": "^2.5.8",
     "@tiptap/extension-youtube": "^2.6.6",
     "@tiptap/pm": "^2.5.8",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sharp": "^0.33.5",
+    "tiptap-extension-font-size": "^1.2.0",
     "tiptap-extension-resize-image": "^1.1.8"
   },
   "devDependencies": {
